<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Moods</string>
    <string name="introTitle">Moods</string>
    <string name="introDescription">Write moods every morning, every day, every evening\nand perform reality checks throughout the day and you\nwill soon achieve full control over your own moods.\nIt is key for best life experience. \'moods\' app is a great\ntoolto have in your journey of life. </string>
    <string name="getStarted">Let\'s get started!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="new_mood_content_desc">New mood</string>
    <string name="intro_next_fab_content_desc">Next</string>
    <string name="sample_mood_date">Date when mood was added</string>
    <string name="sample_mood_desc">Description about the mood</string>
    <string name="mood_emoji_content_desc">Emoji</string>
    <string name="bottom_nav_journal">Journal</string>
    <string name="bottom_nav_stats">Statistics</string>
    <string name="bottom_nav_calendar">Calendar</string>
    <string name="bottom_nav_settings">Settings</string>
    <string name="bottom_nav_about">About</string>
    <string name="total_stats">You have recorded %1$d Moods!</string>
    <string name="avg_all_time_stats">Your all time average mood</string>
    <string name="all_time_average_mood_content_desc">All time average mood</string>
    <string name="average_mood_last_7_days_content_desc">Average mood last 7 days</string>
    <string name="your_average_mood_in_last_7_days">Your average mood in last 7 days</string>
    <string name="made_by">Made by</string>
    <string name="about_app">“Moods” – a perfect tool to track your everyday mood! App\'s intuitive design let\'s you easily capture your current mood and check how you are doing in general - has your weekly mood improved or not!</string>
    <string name="giedrius_pakalniskis">Giedrius Pakalniškis</string>
    <string name="mindaugas_bernotas">Mindaugas Bernotas</string>
</resources>