<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/journalFragmentMenuItem"
        android:icon="@drawable/list_alt_white"
        android:title="@string/bottom_nav_journal" />

    <item
        android:id="@+id/statisticsFragmentMenuItem"
        android:icon="@drawable/outline_dashboard_white"
        android:title="@string/bottom_nav_stats" />

    <!-- Placeholder-->
    <item
        android:id="@+id/emptyMenuItem"
        android:enabled="false"
        android:title="" />

    <item
        android:id="@+id/calendarFragmentMenuItem"
        android:icon="@drawable/calendar_today_white"
        android:title="@string/bottom_nav_calendar" />

    <item
        android:id="@+id/settingsFragmentMenuItem"
        android:icon="@drawable/info_outline_white"
        android:title="@string/bottom_nav_about" />
</menu>